# alm_notes

./: .gitignore  CLAUDE.md  Makefile  README.md  install.sh  main.py  migrate.py  mkdocs.yml  new-page.py  pyproject.toml  ruff.toml
docs/: couvercle-ferme.md  entretien-et-mise-a-niveau.md  faq-tuxedo-infinitybook-pro-14.md  index.md  materiel.md  mise-a-jour-bios-ec.md  notebook-veille-aleatoire.md  ouverture-boitier.md
docs/developpement/: glossaire.md  index.md
docs/developpement/python/: index.md  pass-cli-subprocess.md  proton-drive-cli-subprocess.md
docs/electronique/: index.md
docs/electronique/pioinit/: index.md  utilisation.md
docs/electronique/platformio/: index.md  premier-projet.md  zed.md
docs/javascripts/: nav-dropdown.js
docs/lcl/: index.md
docs/lcl/cicd/: conception-pipeline.md  index.md
docs/lcl/fondamentaux/: endianness.md  index.md  types-numeriques.md
docs/lcl/kafka/: architecture-zos-kafka (Copie).md  architecture-zos-kafka.md  index.md
docs/lcl/python/: exemples-pratiques.md  index.md  pourquoi-python-mainframe.md
docs/lcl/refactoring/: index.md
docs/lcl/vscode-docker/: bundle_z_vscode.md  dockerfile-macos.md  index.md
docs/lcl/zdevops/: adr-001-next-artifact-number.md  configuration.md  (+15 more)
docs/outils/: claude-code.md  exiftool.md  github-cli.md  gsconnect.md  index.md  kitty.md  scrcpy.md  yt-dlp.md  zed-docs.md
docs/securite/: certificats.md  ecryptfs.md  index.md  openssl.md  proton.md  rotation-mots-de-passe.md
docs/stylesheets/: extra.css
drafts/: cics_event_processing.md  smartphone-linux-pistes-a-explorer.md
(+145 files in other folders)
