[project]
name = "wikinotes"
version = "0.1.0"
description = "Wiki de documentation technique personnelle propulsé par MkDocs Material"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
    "mkdocs-macros-plugin>=1.0.0",
]
